Bug#22173, "TRUNCATE does not reset auto_increment counter"

- Added multiclient testcase, falcon_bug_22173a.
- Disabled falcon_bug_22173a until concurrency issues with TRUNCATE are resolved.
- Enabled simple TRUNCATE testcase, falcon_bug_22173
- Table::retireRecords() - ensure 'records' is non-null after acquiring scavenger lock